<resources>
    <string name="app_name">AGTracker</string>
    <string name="note_text_no_places_found">Keine Daten gefunden</string>
    <string name="google_maps_api_key">AIzaSyA5_kCgDCmLiEty0-JT1TleLlU8qZ_e8XA</string>
    <string name="title_activity_main_nav">MainActivityNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AG Tracker v0.1</string>
    <string name="nav_header_subtitle">Alpha Version</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Texts -->
    <string name="menu_home">Feld</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_track_point">Punkt aufnehmen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_track_area">Fläche aufnehmen</string>
    <string name="menu_navigate">Navigation</string>
    <string name="menu_list_tracked_places">Liste</string>
    <string name="menu_export">Export</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="settings_gps_filter_on">GPS Filter an</string>
    <string name="lat">Lat:</string>
    <string name="lon">Long:</string>
    <string name="accuracy">Genauigkeit:</string>
    <string name="tracking_running">Tracking läuft</string>
    <string name="nav_input_enter_coordinates">Koordinaten eingeben</string>
    <string name="btn_start_navigation">Navigation starten</string>
    <string name="pref_btns">Buttons</string>
</resources>