<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_track_point"
            android:icon="@drawable/ic_baseline_add_location_alt_24"
            android:title="@string/menu_track_point"/>
        <item android:id="@+id/nav_track_area"
            android:icon="@drawable/ic_baseline_add_road_24"
            android:title="@string/menu_track_area"/>
        <item android:id="@+id/nav_navigation"
            android:icon="@drawable/ic_baseline_navigation_24"
            android:title="@string/menu_navigate" />

    </group>
</menu>